@@ -408,6 +408,9 @@ Library
 Tests
 -----
 
+- Issue #16897: test_bisect now works with unittest test discovery.
+  Initial patch by Zachary Ware.
+
 - Issue #16852: test_genericpath, test_posixpath, test_ntpath, and test_macpath
   now work with unittest test discovery.  Patch by Zachary Ware.
 
